InventoryManagement/force-app/src/objects/Cycle_Count__c.object
<CustomObject>
    <fields>
        <fullName>Active_Count__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active Count</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Actual_Quantity__c</fullName>
        <label>Actual Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approval_Rejection_Reason__c</fullName>
        <label>Approval/ Rejection Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cycle_Count_Version__c</fullName>
        <label>Cycle Count Version</label>
        <referenceTo>Cycle_Count_Version__c</referenceTo>
        <relationshipName>Cycle_Counts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Overall_Quantity__c</fullName>
        <label>Overall Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <formula>TEXT(Product_Item__r.Product2.Family)</formula>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Item__c</fullName>
        <label>Product Item</label>
        <referenceTo>ProductItem</referenceTo>
        <relationshipName>CycleCounts_del</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>Product_Item__r.Product2.Name</formula>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_SKU__c</fullName>
        <formula>Product_Item__r.EnergyAid_Product_SKU__c</formula>
        <label>Product SKU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type_Main__c</fullName>
        <formula>TEXT(Product_Item__r.Product2.Product_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Type (Main)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type_Sub__c</fullName>
        <formula>TEXT(Product_Item__r.Product2.Product_Type_Sub__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Type (Sub)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <defaultValue>Text(1)</defaultValue>
        <label>Quantity</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity_before_Recount__c</fullName>
        <label>Quantity before Recount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recount_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recount Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Serialized_Product__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Serialized Product</label>
        <referenceTo>SerializedProduct</referenceTo>
        <relationshipName>Cycle_Counts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Listed_Quantity__c</fullName>
        <label>Total Listed Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Variance__c</fullName>
        <formula>Serialized_Product__r.Variance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Cycle Count Entry</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Cycle_Count_Version__c</columns>
        <columns>Product_Item__c</columns>
        <columns>Serialized_Product__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CC-{0000}</displayFormat>
        <label>Cycle Count Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cycle Count Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Quantity_should_be_always_1</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
   Quantity__c &lt;&gt; Text(1)
)</errorConditionFormula>
        <errorDisplayField>Quantity__c</errorDisplayField>
        <errorMessage>Quantity of the Cycle Count is always one</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Recount_not_allowed_on_Approved_Records</fullName>
        <active>false</active>
        <errorConditionFormula>AND(  Approved__c,  Recount_Needed__c  )</errorConditionFormula>
        <errorDisplayField>Recount_Needed__c</errorDisplayField>
        <errorMessage>You cannot ask for a recount on Approved record.</errorMessage>
    </validationRules>
</CustomObject>